sign in / sign up modals, getting there, spacing and alignment issues. Made log in and sign up have different titles, made consistent terms for Sign In vs Login, since we say signup. also added terms create account. weillneed help with some modal styles, since they are shared with the new post form

--- a/app/styles/_anon.scss
+++ b/app/styles/_anon.scss
@@ -37,7 +37,7 @@ body.anon{
 	header {
 
 		h1, h2, h3, h4, h5, a {
-			font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
+			font-family: $primary-font;
 			color: #ffffff;
 		}
 
@@ -96,7 +96,9 @@ body.anon{
 		text-align:center;
 		
 		.modal-content, .modal-body {
-			background-color: rgba(0, 0, 0, 0.8);	
+			background-color: rgba(0, 0, 0, 0.8);
+			-webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+			border: 0px;
 		}
 
 		.modal-header{
