--- a/app/styles/_common.scss
+++ b/app/styles/_common.scss
@@ -131,13 +131,17 @@ body.modal-open {
 .modal{
 	display:inline;
 	z-index: $z-index-modal;
-	background-color: rgba(51, 51, 51, 0.8);
+	background-color: rgba(255, 255, 255, 0);
 	overflow: scroll;
 	border-radius: none;
  
 
 	.modal-content {
+		background-color: #fff;
 		border-radius: 0;
+		box-shadow: 0 rgba (0, 0, 0, 0);
+		-webkit-box-shadow: 0 0 0 rgba(0, 0, 0, 0);
+			border: 0px;
 	}
 
 	.modal-dialog {
@@ -193,12 +197,13 @@ body.modal-open {
 
 
 .btn-primary {
-	border-color: #ccc;
+	padding: 8px 2px;
+	border: none;
 	background-color: $primary-color;
 }
 
 .btn-primary:hover{
-	background-color: #445066;
+	background-color: $primary-color-hover;
 }
 
  
@@ -215,15 +220,19 @@ body.modal-open {
 }
 
 .btn-facebook {
+	padding: 8px 2px;
+	font-size: 12px;
 	color: #fff;
-	background-color: #3B5998;
+	background-color: #3b5998;
 	border: none;
-	text-transform: uppercase;
-	font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-	font-weight: 700;
+	max-width: 200px;
+	//text-transform: uppercase;
+	font-family: $primary-font;
+	font-weight: 400;
 	&:hover {
-		background-color: #879ac0;
+		background-color: #324b7f;
 		border: none;
+		color: #fff;
 	}
 }
  
