--- a/app/styles/_post.scss
+++ b/app/styles/_post.scss
@@ -5,7 +5,7 @@
 	color: #ffffff;
 	border: none;
 	display:inline-block;
-	padding-top:5px;
+	padding-top:3px;
 	height:35px;
 	font-family: $primary-font;
 	font-weight: 600;
